{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 38,
  "lineage": "a64effb0-98e5-2d5c-c28c-1b2f8f9a9007",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver1",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver2",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external-elb",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external-elb",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "external-elb",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "external-elb1",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "external-elb2",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-rt",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:168160359185:security-group/sg-02085c02f058e921f",
            "description": "Allow inbound traffic from application layer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-02085c02f058e921f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from application layer",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04307d8a2998208f5"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database-SG",
            "name_prefix": "",
            "owner_id": "168160359185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0443c174952544cf9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:168160359185:security-group/sg-01601115be77e3135",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01601115be77e3135",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web-SG",
            "name_prefix": "",
            "owner_id": "168160359185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0443c174952544cf9"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:168160359185:security-group/sg-04307d8a2998208f5",
            "description": "Allow inbound traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04307d8a2998208f5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from web layer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01601115be77e3135"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Webserver-SG",
            "name_prefix": "",
            "owner_id": "168160359185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Webserver-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0443c174952544cf9"
          },
          "dependencies": [
            "aws_security_group.web-sg",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application-subnet-1",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application-subnet-2",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:168160359185:subnet/subnet-0c305e6247416571c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.21.0/24",
            "id": "subnet-0c305e6247416571c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "168160359185",
            "tags": {
              "Name": "Database-1a"
            },
            "tags_all": {
              "Name": "Database-1a"
            },
            "vpc_id": "vpc-0443c174952544cf9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:168160359185:subnet/subnet-064acee5c5f8b5595",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.22.0/24",
            "id": "subnet-064acee5c5f8b5595",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "168160359185",
            "tags": {
              "Name": "Database-2b"
            },
            "tags_all": {
              "Name": "Database-2b"
            },
            "vpc_id": "vpc-0443c174952544cf9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-subnet-1",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-subnet-2",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:168160359185:vpc/vpc-0443c174952544cf9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dc2a2228a9047961",
            "default_route_table_id": "rtb-0f1fc17a88675843b",
            "default_security_group_id": "sg-050daf1f6c56b6460",
            "dhcp_options_id": "dopt-06621c9502b64b0e2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0443c174952544cf9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f1fc17a88675843b",
            "owner_id": "168160359185",
            "tags": {
              "Name": "Demo VPC"
            },
            "tags_all": {
              "Name": "Demo VPC"
            }
          }
        }
      ]
    }
  ]
}